Fix wrong spacing validation rules

--- a/source/scss/tools/spacings.scss
+++ b/source/scss/tools/spacings.scss
@@ -82,7 +82,7 @@
 @mixin spacing($position, $spacingSize, $inner: false, $absolute: false) {
 
     // Validate correct usage of params
-    @include validateSpacingParams();
+    @include validateSpacingParams($position, $inner, $absolute);
 
     $spaceType: null;
 
@@ -128,7 +128,7 @@
 @mixin spacings($position, $spacingSizes, $inner: false, $absolute: false) {
 
     // Validate correct usage of params
-    @include validateSpacingParams();
+    @include validateSpacingParams($position, $inner, $absolute);
 
     $lastSpacingSize: null;
     $spaceType: null;
@@ -205,7 +205,7 @@
 /**
  * Function to validate the correct use of the spacing mixins
  */
-@mixin validateSpacingParams($position, $spacingSizes, $inner: false, $absolute: false) {
+@mixin validateSpacingParams($position, $inner, $absolute) {
 
     // Validate if position is correct
     @if not map-has-key((top: true, right: true, bottom: true, left: true, all: true), $position) {
@@ -213,7 +213,7 @@
     }
 
     // Validate that spacing is not "inner" (paddings) and "absolute" (left/right/bottom/top) at the same time
-    @if $inner && $absolute {
+    @if $inner and $absolute {
         @error 'Spacings can only either be "inner" or "absolute" (padding or left/right etc.)';
     }
 
